CSS global colors updated; static-viz thumbnail added

--- a/MyPortfolio/public/css/style.css
+++ b/MyPortfolio/public/css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-color: #007a60;
+  --secondary-color: #da7ccc;
+  --text-color: #333;
+}
+
 html, body, button, input, select, textarea, .pure-g [class *="pure-u"] {
     font-family: Bitter, Palatino, serif;
 }
@@ -73,7 +79,9 @@ table, img {
 }
 
 #sidebar .pure-menu-item a {
-    color: #900;
+    /* color: #900; */
+    color: var(--primary-color);
+    
 }
 
 #sidebar .pure-menu-item a small {
@@ -154,7 +162,8 @@ section.toc h3 {
     color: #fff;
     border-radius: 16px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-    background-color: #900;
+    /* background-color: #900; */
+    background-color: var(--primary-color)
 }
 
 
@@ -202,7 +211,8 @@ h3 {
 }
 
 a {
-    color: #900;
+    /* color: #900; */
+    color: var(--primary-color);
     text-decoration: none;
 }
 
@@ -213,7 +223,8 @@ a {
 }
 
 .sc:hover {
-    color: #900;
+    /* color: #900; */
+    color: var(--primary-color);
     -webkit-transform: rotate(11deg);
     transform: scale(1.2);
 }
