--- a/MyPortfolio/themes/hugo-theme-prav/layouts/partials/footer.html
+++ b/MyPortfolio/themes/hugo-theme-prav/layouts/partials/footer.html
@@ -3,7 +3,7 @@
         <p>This page and its contents are copyright &copy; {{ now.Format "2006"}},
             <a href="{{ .Site.Params.baseURL }}">{{ .Site.Params.author }}</a>.
         </p>
-        <p><a href="https://github.com/pravin/hugo-theme-prav">Theme Prav</a> by <a href="https://cto.me.uk">Pravin
+        <p>Adapted from <a href="https://github.com/pravin/hugo-theme-prav">Prav theme</a> by <a href="https://cto.me.uk">Pravin
                 Paratey</a></p>
     </footer>
 
