--- a/themes/hugo-theme-prav/layouts/partials/menu.html
+++ b/themes/hugo-theme-prav/layouts/partials/menu.html
@@ -13,12 +13,12 @@
                 Articles
             </a>
         </li>
-        <li class="pure-menu-item">
+        <!-- <li class="pure-menu-item">
             <a href="/tags" class="pure-menu-link">
                 <i class="fas fa-comments"></i>
                 Categories
             </a>
-        </li>
+        </li> -->
         <li class="pure-menu-item">
             <a href="/about" class="pure-menu-link">
                 <i class="fas fa-smile"></i>
