--- a/themes/hugo-theme-prav/layouts/_default/single.html
+++ b/themes/hugo-theme-prav/layouts/_default/single.html
@@ -4,7 +4,8 @@
 <div id="content" class="pure-u-1 pure-u-md-3-4 pure-u-sm-1">
     <div class="pad">
         
-        {{- partial "render_single_article.html" . -}}
+        <!-- {{- partial "render_single_article.html" . -}} -->
+         {{ partial "render_single_article.html" (dict "Ctx" . "IsMainPage" false) }}
         
         {{ template "_internal/disqus.html" . }}
     </div>
