--- a/themes/hugo-theme-prav/layouts/partials/footer.html
+++ b/themes/hugo-theme-prav/layouts/partials/footer.html
@@ -1,8 +1,8 @@
 <div class="pure-g">
     <footer class="pure-u-1 pure-u-md-1 pure-u-sm-1">
-        <p>This page and its contents are copyright &copy; {{ now.Format "2006"}},
+        <!-- <p>This page and its contents are copyright &copy; {{ now.Format "2006"}},
             <a href="{{ .Site.Params.baseURL }}">{{ .Site.Params.author }}</a>.
-        </p>
+        </p> -->
         <p>Adapted from <a href="https://github.com/pravin/hugo-theme-prav">Prav theme</a> by <a href="https://cto.me.uk">Pravin
                 Paratey</a></p>
     </footer>
