--- a/themes/hugo-theme-prav/layouts/partials/sidebar.html
+++ b/themes/hugo-theme-prav/layouts/partials/sidebar.html
@@ -1,14 +1,25 @@
 <!-- SIDEBAR -->
 <div id="sidebar" class="pure-u-1 pure-u-md-1-4 pure-u-sm-1">
     <div class="pad">
-        <a name="about"></a>
+
+        <!-- <a name="about"></a>
         <h3>About Me</h3>
         <div style="text-align: center;">
             <img src="{{ .Site.Params.AuthorImgPath }}" alt="{{ .Site.Params.Author }}" class="pure-img" />
             <p><em>{{ .Site.Params.AuthorBlurb }}</em></p>
+        </div> -->
+        <h3>Welcome</h3>
+        <div style="text-align: center;">
+            <img
+                src="{{ .Site.Params.AuthorImgPath }}" 
+                alt="{{ .Site.Params.Author }}" 
+                class="pure-img"
+                width="100em">
+            </img>
+            <p><em>{{ .Site.Params.AuthorBlurb }}</em></p>
         </div>
 
-        <h3>Latest Articles</h3>
+        <!-- <h3>Latest Articles</h3>
         <div class="pure-menu pure-menu-open">
             <ul class="pure-menu-list">
                 {{ $mainSections := .Site.Params.mainSections | default (slice "posts") }}
@@ -30,6 +41,7 @@
                 <small>({{ .Count }})</small></a>
             {{ end }}
             {{end}}
-        </div>
+        </div> -->
+        
     </div> <!-- pad -->
 </div> <!-- sidebar -->
