--- a/themes/hugo-theme-prav/layouts/partials/menu.html
+++ b/themes/hugo-theme-prav/layouts/partials/menu.html
@@ -10,7 +10,7 @@
         <li class="pure-menu-item">
             <a href="/posts" class="pure-menu-link">
                 <i class="fa fa-archive"></i>
-                Articles
+                Posts
             </a>
         </li>
         <!-- <li class="pure-menu-item">
@@ -89,8 +89,11 @@
             </a>
         </li> -->
     </ul>
+
 </div>
+<div class="pad"></div>
+<!-- </div>
 <div class="pure-u-1">
     <div class="pad">
     </div>
-</div>
+</div> -->
