--- a/themes/hugo-theme-prav/static/css/style.css
+++ b/themes/hugo-theme-prav/static/css/style.css
@@ -4,6 +4,10 @@
   --text-color: #333;
 }
 
+.pure-g {
+    align-items: stretch;
+}
+
 html, body, button, input, select, textarea, .pure-g [class *="pure-u"] {
     font-family: Bitter, Palatino, serif;
 }
@@ -23,8 +27,13 @@ table, img {
     max-width: 100%;
 }
 
+hr {
+    margin-top: 2.5em;
+    margin-bottom: 2em;
+}
+
 .container {
-    max-width: 1200px;
+    max-width: 95%;
     margin: 0 auto;
 }
 
@@ -34,6 +43,8 @@ table, img {
     -webkit-box-shadow: 0 0 5px #666;
     box-shadow: 0 0 5px #666;
     font-family: "Fira Sans Condensed", sans-serif;
+    display: block;
+    width: 100%;
 }
 
 #navbar a {
@@ -48,6 +59,12 @@ table, img {
 #navbar .pure-menu-heading {
     font-size: 1.5em;
     text-transform: none;
+}
+
+#navbar-wrapper {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 #blurb {
@@ -81,15 +98,56 @@ table, img {
 }
 
 #content li {
-    margin: 1em 0;
+    margin: 0.25em 0;
 }
 
 .content {
     flex: 1 0 auto;
 }
 
+#sidebar {
+    position: sticky;
+    top: 5rem;
+    align-self: flex-start;
+    /* background: none; */
+    background-color: #eee;
+    /* background-color: #ddd; */
+    z-index: 1;
+    /* border-radius: 15px 15px 15px; */
+    /* box-shadow: 0px 0px 15px 2px #ffffff70; */
+    /* box-shadow: -4px 2px 16px rgba(0,0,0,0.35); */
+    box-shadow: 0 0 5px #999;
+    transform: translateY(50%);
+    
+    /* border-left: 3px solid var(--primary-color); */
+    /* border-top: 2px solid var(--text-color); */
+    /* border-bottom: 3px solid var(--text-color);
+    border-right: 2px solid var(--text-color); */
+}
+
+/* #sidebar::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 100%;
+    right: -100vw;
+    background-color: #00000000;
+    background-color: var(--text-color);
+    z-index: -1;
+} */
+
+#sidebar::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 5px;
+  background: var(--primary-color);
+}
+
 #sidebar .pure-menu-item a {
-    /* color: #900; */
     color: var(--primary-color);
     
 }
@@ -165,6 +223,7 @@ section.toc h3 {
 .tags {
     font-size: 0.8em;
     font-family: "Fira Sans Condensed", sans-serif;
+    padding-top: 1em;
 }
 
 .tags .pure-button {
@@ -257,7 +316,7 @@ a {
 }
 
 #sidebar .pure-menu {
-    background: #ddd;
+    background: transparent;
 }
 
 #sidebar h3 {
@@ -293,7 +352,8 @@ div.highlight pre {
 /* Custom Styles */
 
 blockquote {
-    color: #636;
+    /* color: #636; */
+    color: var(--secondary-color);
     font-style: italic;
     font-size: 1.2em;
     line-height: 1.6em;
@@ -318,4 +378,95 @@ blockquote {
 
 .pagination-item {
     margin: 0 2em;
+}
+
+.article-summary {
+    padding-top: 0;
+}
+
+/* Article preview layout */
+.article-grid {
+    display: flex;
+    gap: 1.5em;
+    align-items: center; /* So thumbnail doesn't float to top of page */
+}
+
+.article-image {
+  flex: 0 0 50%;
+  border-left: 4px solid var(--primary-color);
+  /* border-bottom: 3px solid var(--text-color); */
+  /* box-shadow: -4px 4px 15px 1px rgba(0, 0, 0, 0.116); */
+  box-shadow: 0 0 5px #999;
+}
+
+.article-image img {
+  margin: 0;
+  display: block;
+  /* box-shadow: 4px 4px 4px var(--text-color); */
+}
+
+.about-columns {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: 2rem;
+    align-items: center;
+}
+
+.about-columns img {
+    width: 180px;
+    max-width: 100%;
+    height: auto;
+}
+
+@media (max-width: 700px) {
+    .about-columns {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .about-columns img {
+        margin: 0 auto;
+    }
+}
+
+article img,
+#content img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+figure {
+    text-align: center;
+    font-style: italic;
+    font-size: small;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.article-content {
+  flex: 1;
+}
+
+/* Image hover overlay */
+.container-hover {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  opacity: 0;
+  transition: opacity 0.25s ease;
+}
+
+.container-hover:hover .overlay {
+  opacity: 1;
 }
